More documentation for the custom design notebook

--- a/experiments/design_custom.ipynb
+++ b/experiments/design_custom.ipynb
@@ -18,7 +18,10 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Imports"
+    "## Imports\n",
+    "\n",
+    "We import necessary libraries, e.g. `jax` and `jax-md`.\n",
+    "This section can likely remain unchanged, unless you need special libraries for your observable implementation."
    ]
   },
   {
@@ -62,17 +65,53 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Constants"
+    "## Constants\n",
+    "\n",
+    "Here we define constants for the optimization.\n",
+    "This includes\n",
+    "- the sequence length\n",
+    "- hyperparameters for sampling reference states via simulation (e.g. the number of steps)\n",
+    "- hyperparameters for optimization (e.g. learning rate, number of iterations).\n",
+    "\n",
+    "You may wish to change these parameters depending on your optimization, e.g. longer sequences will require longer simulations to sample a representative ensemble."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "57f0fbbb-cfd3-4566-a82e-82d448f5f456",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'random' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m key \u001b[38;5;241m=\u001b[39m \u001b[43mrandom\u001b[49m\u001b[38;5;241m.\u001b[39mPRNGKey(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      2\u001b[0m res_masses \u001b[38;5;241m=\u001b[39m utils\u001b[38;5;241m.\u001b[39mmasses\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Sequence parameters\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
+     ]
+    }
+   ],
    "source": [
     "key = random.PRNGKey(0)\n",
+    "res_masses = utils.masses\n",
+    "\n",
+    "# Sequence parameters\n",
+    "seq_length = 50\n",
+    "\n",
+    "bonded_nbrs = jnp.array([(i, i+1) for i in range(seq_length-1)])\n",
+    "unbonded_nbrs = list()\n",
+    "for pair in itertools.combinations(jnp.arange(seq_length), 2):\n",
+    "    unbonded_nbrs.append(pair)\n",
+    "unbonded_nbrs = jnp.array(unbonded_nbrs)\n",
+    "\n",
+    "unbonded_nbrs_set = set([tuple(pr) for pr in onp.array(unbonded_nbrs)])\n",
+    "bonded_nbrs_set = set([tuple(pr) for pr in onp.array(bonded_nbrs)])\n",
+    "unbonded_nbrs = jnp.array(list(unbonded_nbrs_set - bonded_nbrs_set))\n",
+    "\n",
+    "# Simulation parameters\n",
     "n_sims = 10\n",
     "n_eq_steps = 10000\n",
     "n_sample_steps = 250000\n",
@@ -85,7 +124,6 @@
     "beta = 1 / kT\n",
     "dt = 0.2\n",
     "gamma = 0.001\n",
-    "seq_length = 50\n",
     "\n",
     "n_iters = 50\n",
     "lr = 0.1\n",
@@ -95,19 +133,7 @@
     "\n",
     "gumbel_end = 0.01\n",
     "gumbel_start = 1.0\n",
-    "gumbel_temps = onp.linspace(gumbel_start, gumbel_end, n_iters)\n",
-    "\n",
-    "bonded_nbrs = jnp.array([(i, i+1) for i in range(seq_length-1)])\n",
-    "unbonded_nbrs = list()\n",
-    "for pair in itertools.combinations(jnp.arange(seq_length), 2):\n",
-    "    unbonded_nbrs.append(pair)\n",
-    "unbonded_nbrs = jnp.array(unbonded_nbrs)\n",
-    "\n",
-    "unbonded_nbrs_set = set([tuple(pr) for pr in onp.array(unbonded_nbrs)])\n",
-    "bonded_nbrs_set = set([tuple(pr) for pr in onp.array(bonded_nbrs)])\n",
-    "unbonded_nbrs = jnp.array(list(unbonded_nbrs_set - bonded_nbrs_set))\n",
-    "\n",
-    "res_masses = utils.masses"
+    "gumbel_temps = onp.linspace(gumbel_start, gumbel_end, n_iters)\n"
    ]
   },
   {
@@ -117,7 +143,15 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Helper Functions"
+    "## Helper Functions\n",
+    "\n",
+    "Here we define helper functions\n",
+    "\n",
+    "First, we define misc. helper functions such as\n",
+    "- Normalization of the logits to a probabilistic sequence representation. Note that we optimize a `(n, 20)` set of logits that can be deterministically mapped to a probabilistic sequence.\n",
+    "- An energy function that computes the expected energy of the probabilistic sequence\n",
+    "\n",
+    "We then define helper functions specific to simulation via `jax-md` based on the hyperparameters defined above."
    ]
   },
   {
@@ -205,7 +239,15 @@
    "id": "97343352-2a33-458c-a68a-43f0ceb5ae83",
    "metadata": {},
    "source": [
-    "## Define Custom Observable"
+    "## Define Custom Observable\n",
+    "\n",
+    "Here, you may define a **custom observable** as the target for optimization.\n",
+    "Observables are defined at the state-level and you may optimize an arbitrary\n",
+    "(continuous and differentiable) function of the expected value of the observable\n",
+    "across the entire ensemble. This notebook assumes that you only wish to optimize\n",
+    "a simple root mean square error (RMSE) from a target value. Note that certain\n",
+    "observables may require enhanced sampling to obtain a representative distribution,\n",
+    "which we do not implement here."
    ]
   },
   {
@@ -216,8 +258,18 @@
    "outputs": [],
    "source": [
     "def observable_fn(R):\n",
+    "    \"\"\"\n",
+    "    This defines a state-level observable for which you would like to \n",
+    "    optimize a sequence with a target expected value. `R` is an `(n, 3)`\n",
+    "    JAX array denoting the positions of the `n` particles. \n",
+    "    \n",
+    "    For example, to optimize the end-to-end distance, this function would \n",
+    "    return:\n",
+    "    \n",
+    "    `jnp.linalg.norm(displacement_fn(R[0], R[-1]))`\n",
+    "    \"\"\"\n",
     "    raise NotImplementedError\n",
-    "target_observable = FIXME"
+    "target_observable = FIXME # The target value of the observable"
    ]
   },
   {
@@ -225,7 +277,15 @@
    "id": "3c9b9df0-6347-4064-a21b-316c625192a6",
    "metadata": {},
    "source": [
-    "## Define Function for Getting Reference States"
+    "## Define Function for Getting Reference States\n",
+    "\n",
+    "Given helper functions for simulation via `jax-md` and our observable, \n",
+    "we define a function that samples reference states for use in differentiable\n",
+    "trajectory reweighting (DiffTRe). This includes running a simulation, sampling\n",
+    "states with some periodicity (defined as `sample_every` above), and returning\n",
+    "- the sampled states\n",
+    "- the calculated observable of each reference state\n",
+    "- the calculated energy of each reference state"
    ]
   },
   {
@@ -263,9 +323,15 @@
   {
    "cell_type": "markdown",
    "id": "4c84e788-ff13-473d-9616-823a1c923177",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## Define Loss Function"
+    "## Define Loss Function\n",
+    "\n",
+    "The second required component for DiffTRe is a loss function that takes as input a reference ensemble and\n",
+    "returns the loss as a function of the computed expected value of the observable by reweighting with\n",
+    "respect to the current parameters."
    ]
   },
   {
@@ -300,9 +366,16 @@
   {
    "cell_type": "markdown",
    "id": "4c7a6db5-989c-469b-bb39-446e0da1778d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## Setup Optimization"
+    "## Setup Optimization\n",
+    "\n",
+    "Finally, we set up the final pieces of our optimization:\n",
+    "- the initialized `(n, 20)` logits (that can be deterministically mapped to a probabilistic sequence)\n",
+    "- an optimizer\n",
+    "- an initial state"
    ]
   },
   {
@@ -332,7 +405,9 @@
    "id": "3f0fd8cb-6ff5-4803-b059-4af3fdaa4d7d",
    "metadata": {},
    "source": [
-    "## Generate Initial Reference States"
+    "## Generate Initial Reference States\n",
+    "\n",
+    "Before we can do our first gradient update, we have to sample an initial set of reference states."
    ]
   },
   {
@@ -351,7 +426,9 @@
    "id": "c1329fa7-4784-43c3-afb5-eeed4d5fb186",
    "metadata": {},
    "source": [
-    "## Optimize"
+    "## Optimize\n",
+    "\n",
+    "We can then perform gradient descent iteratively, resampling reference states when necessary!"
    ]
   },
   {
