Cleaning up the example notebook

--- a/experiments/design_custom.ipynb
+++ b/experiments/design_custom.ipynb
@@ -8,7 +8,9 @@
     "# Customizable Design Notebook\n",
     "\n",
     "This notebook contains a scaffold of a simple optimization for a custom state-level property.\n",
-    "Please implement your own state-level observable in `observable_fn` and set the value of `target_observable`."
+    "Please implement your own state-level observable in `observable_fn` and set the value of `target_observable`.\n",
+    "\n",
+    "We **strongly** recommend running this notebook on a GPU to accelerate the sampling of reference states."
    ]
   },
   {
@@ -20,13 +22,13 @@
    "source": [
     "## Imports\n",
     "\n",
-    "We import necessary libraries, e.g. `jax` and `jax-md`.\n",
+    "We first import necessary libraries, e.g. `jax` and `jax-md`.\n",
     "This section can likely remain unchanged, unless you need special libraries for your observable implementation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0b3a78ad-2da4-4858-9b2c-7eef4923e3a1",
    "metadata": {},
    "outputs": [],
@@ -47,15 +49,13 @@
     "import jax\n",
     "jax.config.update(\"jax_enable_x64\", True)\n",
     "import jax.numpy as jnp\n",
-    "import jax.scipy as jsp\n",
     "from jax import vmap, jit, value_and_grad, lax, random\n",
     "from jax_md import space, simulate\n",
     "import optax\n",
     "\n",
     "from idp_design.energy_prob import get_energy_fn\n",
     "import idp_design.utils as utils\n",
-    "import idp_design.checkpoint as checkpoint\n",
-    "import idp_design.observable as observable"
+    "import idp_design.checkpoint as checkpoint"
    ]
   },
   {
@@ -73,33 +73,38 @@
     "- hyperparameters for sampling reference states via simulation (e.g. the number of steps)\n",
     "- hyperparameters for optimization (e.g. learning rate, number of iterations).\n",
     "\n",
-    "You may wish to change these parameters depending on your optimization, e.g. longer sequences will require longer simulations to sample a representative ensemble."
+    "Crucially, the accuracy of the optimization depends on the degree to which the sampled reference states approximate the ensemble. This means that more expensive simulations will yield more accurate optimizations. \n",
+    "\n",
+    "By default, we set the relevant simulation parameters to correspond to an *extremely* inexpensive simulation, i.e.\n",
+    "- `n_sims = 2`\n",
+    "- `n_sample_steps = 25000`\n",
+    "- `sample_every = 250`\n",
+    "\n",
+    "These hyperparameters correspond to only `25000 * 2 / 250 = 200` (potentially correlated) reference states.\n",
+    "We choose these defaults as they are computationally tractable on a CPU for demonstrative purposes while yielding sufficiently representative ensembles for very simple optimizations, e.g. minimizing or maximizing the end-to-end distance for an IDP of length `n = 25`. \n",
+    "\n",
+    "\n",
+    "You may wish to change these parameters depending on your optimization, e.g. longer sequences will require longer simulations to sample a representative ensemble.\n",
+    "For example, a representative optimization for a target radius of gyration (Rg) in our paper uses the following simulation parameters:\n",
+    "- `n_sims = 10`\n",
+    "- `n_sample_steps = 250000`\n",
+    "- `sample_every = 1000`\n",
+    "- `n_eq_steps = 10000`\n",
+    "- `seq_length = 50`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "57f0fbbb-cfd3-4566-a82e-82d448f5f456",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'random' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m key \u001b[38;5;241m=\u001b[39m \u001b[43mrandom\u001b[49m\u001b[38;5;241m.\u001b[39mPRNGKey(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      2\u001b[0m res_masses \u001b[38;5;241m=\u001b[39m utils\u001b[38;5;241m.\u001b[39mmasses\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Sequence parameters\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "key = random.PRNGKey(0)\n",
     "res_masses = utils.masses\n",
     "\n",
     "# Sequence parameters\n",
-    "seq_length = 50\n",
+    "seq_length = 25\n",
     "\n",
     "bonded_nbrs = jnp.array([(i, i+1) for i in range(seq_length-1)])\n",
     "unbonded_nbrs = list()\n",
@@ -112,10 +117,10 @@
     "unbonded_nbrs = jnp.array(list(unbonded_nbrs_set - bonded_nbrs_set))\n",
     "\n",
     "# Simulation parameters\n",
-    "n_sims = 10\n",
+    "n_sims = 2\n",
     "n_eq_steps = 10000\n",
-    "n_sample_steps = 250000\n",
-    "sample_every = 1000\n",
+    "n_sample_steps = 25000\n",
+    "sample_every = 250\n",
     "assert(n_sample_steps % sample_every == 0)\n",
     "num_points_per_batch = n_sample_steps // sample_every\n",
     "n_ref_states = num_points_per_batch * n_sims\n",
@@ -125,6 +130,7 @@
     "dt = 0.2\n",
     "gamma = 0.001\n",
     "\n",
+    "# Optimization parameters\n",
     "n_iters = 50\n",
     "lr = 0.1\n",
     "min_neff_factor = 0.90\n",
@@ -147,9 +153,9 @@
     "\n",
     "Here we define helper functions\n",
     "\n",
-    "First, we define misc. helper functions such as\n",
+    "First, we define miscellaneous helper functions such as\n",
     "- Normalization of the logits to a probabilistic sequence representation. Note that we optimize a `(n, 20)` set of logits that can be deterministically mapped to a probabilistic sequence.\n",
-    "- An energy function that computes the expected energy of the probabilistic sequence\n",
+    "- An energy function that computes the expected energy of the probabilistic sequence.\n",
     "\n",
     "We then define helper functions specific to simulation via `jax-md` based on the hyperparameters defined above."
    ]
@@ -266,23 +272,30 @@
     "    For example, to optimize the end-to-end distance, this function would \n",
     "    return:\n",
     "    \n",
-    "    `jnp.linalg.norm(displacement_fn(R[0], R[-1]))`\n",
+    "    `return jnp.linalg.norm(displacement_fn(R[0], R[-1]))`\n",
     "    \"\"\"\n",
     "    raise NotImplementedError\n",
-    "target_observable = FIXME # The target value of the observable"
+    "\n",
+    "\"\"\"\n",
+    "Here, you must set the target value of the observable.\n",
+    "Simply use extreme values (e.g. 0.0, 1e6) to minimize or maximize the observable.\n",
+    "\"\"\"\n",
+    "target_observable = 0.0 # FIXME: set to your target value\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "3c9b9df0-6347-4064-a21b-316c625192a6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Define Function for Getting Reference States\n",
     "\n",
     "Given helper functions for simulation via `jax-md` and our observable, \n",
     "we define a function that samples reference states for use in differentiable\n",
     "trajectory reweighting (DiffTRe). This includes running a simulation, sampling\n",
-    "states with some periodicity (defined as `sample_every` above), and returning\n",
+    "states with some periodicity (defined as `sample_every` above), and returning:\n",
     "- the sampled states\n",
     "- the calculated observable of each reference state\n",
     "- the calculated energy of each reference state"
@@ -300,9 +313,6 @@
     "    iter_key, norm_key = random.split(iter_key)\n",
     "    curr_pseq = normalize(curr_logits, temp, norm_key)\n",
     "\n",
-    "    iter_dir = ref_traj_dir / f\"iter{i}\"\n",
-    "    iter_dir.mkdir(parents=False, exist_ok=False)\n",
-    "\n",
     "    curr_mass = utils.get_pseq_mass(curr_pseq, res_masses=res_masses)\n",
     "\n",
     "    iter_key, batch_key = random.split(iter_key)\n",
@@ -312,7 +322,7 @@
     "    print(f\"- Batched simulation took {end - start} seconds\")\n",
     "    sample_traj = utils.tree_stack(sample_traj)\n",
     "\n",
-    "    sample_observables = vmap(observable_fn(sample_traj)\n",
+    "    sample_observables = vmap(observable_fn)(sample_traj)\n",
     "    mean_observable = onp.mean(sample_observables)\n",
     "\n",
     "    sample_energies = mapped_energy_fn(sample_traj, curr_pseq)\n",
@@ -353,7 +363,6 @@
     "    weighted_observables = weights * ref_observables # element-wise multiplication\n",
     "    expected_observable = jnp.sum(weighted_observables)\n",
     "\n",
-    "\n",
     "    mse = (expected_observable - target_observable)**2\n",
     "    rmse = jnp.sqrt(mse)\n",
     "    loss = rmse\n",
@@ -385,16 +394,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize the logits to be optimized\n",
     "init_logits = onp.full((seq_length, 20), 100.0)\n",
     "init_logits = jnp.array(init_logits, dtype=jnp.float64)\n",
     "\n",
-    "# Setup the optimization\n",
+    "# Initialize the optimizer\n",
     "params = {\"logits\": init_logits}\n",
     "optimizer = optax.adam(learning_rate=lr)\n",
     "opt_state = optimizer.init(params)\n",
     "\n",
+    "# Construct an initial state\n",
     "R_init = list()\n",
     "init_spring_r0 = utils.spring_r0\n",
+    "out_box_size = 200.0\n",
     "for i in range(seq_length):\n",
     "    R_init.append([out_box_size/2, out_box_size/2, out_box_size/2+init_spring_r0*i])\n",
     "R_init = jnp.array(R_init)"
@@ -423,6 +435,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1cf3bca-a9ac-4ac2-9e38-89fad9715f30",
+   "metadata": {},
+   "source": [
+    "After we collect our first batch of reference states, we can do a quick sanity check to see if we are sampling enough reference states.\n",
+    "We will plot the running average of our observable and check for convergence. If it hasn't converged, you have to sample more reference states!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c7a9c8c-f4d5-4999-bd2b-c7c24e107c66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "running_avg = onp.cumsum(ref_observables) / onp.arange(1, ref_observables.shape[0]+1)\n",
+    "plt.plot(running_avg)\n",
+    "plt.xlabel(\"# Samples\")\n",
+    "plt.ylabel(\"Avg. Observable\")\n",
+    "plt.title(\"Running Average of Observable\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1329fa7-4784-43c3-afb5-eeed4d5fb186",
    "metadata": {},
    "source": [
@@ -442,22 +478,27 @@
     "for i in range(n_iters):\n",
     "    print(f\"\\nIteration {i}:\")\n",
     "    key, loss_key = random.split(key)\n",
+    "\n",
+    "    # Compute the gradients (and n_eff)\n",
     "    (loss, aux), grads = grad_fn(params, ref_states, ref_energies, ref_observables, gumbel_temps[i], loss_key)\n",
     "    n_eff = aux[0]\n",
     "    num_resample_iters += 1\n",
     "\n",
+    "    # Determine if we have to resample\n",
     "    if n_eff < min_n_eff or num_resample_iters > max_approx_iters:\n",
     "        print(f\"- N_eff was {n_eff}... resampling reference states...\")\n",
     "        num_resample_iters = 0\n",
     "\n",
     "        key, iter_key = random.split(key)\n",
+    "\n",
+    "        # Resample if our effective sample size is below the threshold\n",
     "        ref_states, ref_energies, ref_observables, mean_rg = get_ref_states(\n",
     "            params, i, utils.recenter(ref_states[-1], out_box_size), iter_key, gumbel_temps[i]\n",
     "        )\n",
     "\n",
+    "        # Recompute the gradients\n",
     "        (loss, aux), grads = grad_fn(params, ref_states, ref_energies, ref_observables, gumbel_temps[i], loss_key)\n",
     "    (n_eff, expected_observable, pseq) = aux\n",
-    "\n",
     "\n",
     "    max_residues = jnp.argmax(pseq, axis=1)\n",
     "    argmax_seq = ''.join([utils.RES_ALPHA[res_idx] for res_idx in max_residues])\n",
@@ -469,6 +510,14 @@
     "    updates, opt_state = optimizer.update(grads, opt_state, params)\n",
     "    params = optax.apply_updates(params, updates)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64a9d9be-30a0-4841-94f6-065411ade0da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
