--- a/examples/design_custom.ipynb
+++ b/examples/design_custom.ipynb
@@ -15,6 +15,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e85ba8a-101c-46fa-97d5-162f5fa57880",
+   "metadata": {},
+   "source": [
+    "> ⚠️ **Setup**: If `idp_design` is not installed locally, run the cell below to clone the repository and install its dependencies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7136a3-3dcb-45e2-bd15-9d90fc9479e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone -b refactor https://github.com/rkruegs123/idp-design.git\n",
+    "%cd idp-design\n",
+    "!pip install -r requirements.txt\n",
+    "!pip install -e ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6024a686-f587-4a0c-8ee6-fd9a4ea8cd02",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -280,7 +301,7 @@
     "Here, you must set the target value of the observable.\n",
     "Simply use extreme values (e.g. 0.0, 1e6) to minimize or maximize the observable.\n",
     "\"\"\"\n",
-    "target_observable = 0.0 # FIXME: set to your target value\n"
+    "target_observable = 1000.0 # FIXME: set to your target value, e.g. 1000 for a large value\n"
    ]
   },
   {
