Fixing notebook to use master rather than refactor branch

--- a/examples/design_custom.ipynb
+++ b/examples/design_custom.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone -b refactor https://github.com/rkruegs123/idp-design.git\n",
+    "!git clone https://github.com/rkruegs123/idp-design.git\n",
     "%cd idp-design\n",
     "!pip install -r requirements.txt\n",
     "!pip install -e ."
