Updating example notebook

--- a/examples/design_custom.ipynb
+++ b/examples/design_custom.ipynb
@@ -18,7 +18,7 @@
    "id": "1e85ba8a-101c-46fa-97d5-162f5fa57880",
    "metadata": {},
    "source": [
-    "> ⚠️ **Setup**: If `idp_design` is not installed locally, run the cell below to clone the repository and install its dependencies."
+    "> ⚠️ **Setup**: If `idp_design` is not installed locally, run the cell below to clone the repository and install its dependencies. The installation process can be time-consuming and may trigger a runtime restart — ensure that you re-run any setup cells afterward."
    ]
   },
   {
