Converting .npy files to .txt

--- a/figures/plot_figures.ipynb
+++ b/figures/plot_figures.ipynb
@@ -263,14 +263,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pseq_0 = figures_data_dir + 'fig2/rg20_opt/pseq/pseq_i0.npy'\n",
-    "pseq_25 = figures_data_dir + 'fig2/rg20_opt/pseq/pseq_i25.npy'\n",
-    "pseq_49 = figures_data_dir + 'fig2/rg20_opt/pseq/pseq_i49.npy'\n",
+    "pseq_0 = figures_data_dir + 'fig2/rg20_opt/pseq/pseq_i0.txt'\n",
+    "pseq_25 = figures_data_dir + 'fig2/rg20_opt/pseq/pseq_i25.txt'\n",
+    "pseq_49 = figures_data_dir + 'fig2/rg20_opt/pseq/pseq_i49.txt'\n",
     "\n",
     "residues = [x for x in 'MGKTRADEYVLQWFSHNPCI']\n",
-    "seq_0 = pd.DataFrame(np.load(pseq_0),columns=residues)\n",
-    "seq_25 = pd.DataFrame(np.load(pseq_25),columns=residues)\n",
-    "seq_49 = pd.DataFrame(np.load(pseq_49),columns=residues)\n",
+    "seq_0 = pd.DataFrame(np.loadtxt(pseq_0),columns=residues)\n",
+    "seq_25 = pd.DataFrame(np.loadtxt(pseq_25),columns=residues)\n",
+    "seq_49 = pd.DataFrame(np.loadtxt(pseq_49),columns=residues)\n",
     "\n",
     "aa_order = list('RHKDEAILPVMNQTGSCYWF')\n",
     "seq_0_rearranged = seq_0[aa_order]\n",
@@ -669,8 +669,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_fig_loop_contact = figures_data_dir + 'fig3/loop/contact_map_distances.npy'\n",
-    "fig3_loop_contacts =np.load(file_fig_loop_contact)\n",
+    "file_fig_loop_contact = figures_data_dir + 'fig3/loop/contact_map_distances.txt'\n",
+    "fig3_loop_contacts =np.loadtxt(file_fig_loop_contact)\n",
     "fig3_ideal_normalization = np.zeros_like(fig3_loop_contacts)\n",
     "for i in range(fig3_loop_contacts.shape[0]):\n",
     "    for j in range(fig3_loop_contacts.shape[1]):\n",
@@ -718,8 +718,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_fig_linker_contact = figures_data_dir + 'fig3/linker/contact_map_distances.npy'\n",
-    "fig3_linker_contacts =np.load(file_fig_linker_contact)\n",
+    "file_fig_linker_contact = figures_data_dir + 'fig3/linker/contact_map_distances.txt'\n",
+    "fig3_linker_contacts = np.loadtxt(file_fig_linker_contact)\n",
     "fig3_ideal_normalization = np.zeros_like(fig3_linker_contacts)\n",
     "for i in range(fig3_linker_contacts.shape[0]):\n",
     "    for j in range(fig3_linker_contacts.shape[1]):\n",
@@ -1188,10 +1188,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_fig_salt_contractor_low= figures_data_dir + 'fig5/contractor/lo/contact_map_distances.npy'\n",
-    "file_fig_salt_contractor_high= figures_data_dir + 'fig5/contractor/hi/contact_map_distances.npy'\n",
-    "fig5_contractor_low =np.load(file_fig_salt_contractor_low)\n",
-    "fig5_contractor_high =np.load(file_fig_salt_contractor_high)\n",
+    "file_fig_salt_contractor_low= figures_data_dir + 'fig5/contractor/lo/contact_map_distances.txt'\n",
+    "file_fig_salt_contractor_high= figures_data_dir + 'fig5/contractor/hi/contact_map_distances.txt'\n",
+    "fig5_contractor_low = np.loadtxt(file_fig_salt_contractor_low)\n",
+    "fig5_contractor_high = np.loadtxt(file_fig_salt_contractor_high)\n",
     "fig5_ideal_normalization = np.zeros_like(fig5_contractor_low)\n",
     "for i in range(fig5_contractor_low.shape[0]):\n",
     "    for j in range(fig5_contractor_low.shape[1]):\n",
@@ -1321,10 +1321,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_fig_salt_expander_low= figures_data_dir + 'fig5/expander/lo/contact_map_distances.npy'\n",
-    "file_fig_salt_expander_high= figures_data_dir + 'fig5/expander/hi/contact_map_distances.npy'\n",
-    "fig5_expander_low =np.load(file_fig_salt_expander_low)\n",
-    "fig5_expander_high =np.load(file_fig_salt_expander_high)\n",
+    "file_fig_salt_expander_low = figures_data_dir + 'fig5/expander/lo/contact_map_distances.txt'\n",
+    "file_fig_salt_expander_high = figures_data_dir + 'fig5/expander/hi/contact_map_distances.txt'\n",
+    "fig5_expander_low = np.loadtxt(file_fig_salt_expander_low)\n",
+    "fig5_expander_high = np.loadtxt(file_fig_salt_expander_high)\n",
     "fig5_ideal_normalization = np.zeros_like(fig5_expander_low)\n",
     "for i in range(fig5_expander_low.shape[0]):\n",
     "    for j in range(fig5_expander_low.shape[1]):\n",
@@ -1519,9 +1519,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fus_binder_contact_frequency_file = figures_data_dir + 'fig6/fuslc/forward-periodic/b500/contact_map_distances.npy'\n",
+    "fus_binder_contact_frequency_file = figures_data_dir + 'fig6/fuslc/forward-periodic/b500/contact_map_distances.txt'\n",
     "\n",
-    "fig6_loop_fus =np.load(fus_binder_contact_frequency_file)\n",
+    "fig6_loop_fus = np.loadtxt(fus_binder_contact_frequency_file)\n",
     "fig6_ideal_normalization = np.zeros_like(fig6_loop_fus)\n",
     "for i in range(fig6_loop_fus.shape[0]):\n",
     "    for j in range(fig6_loop_fus.shape[1]):\n",
@@ -1559,8 +1559,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fus_binder_contact_frequency_file = figures_data_dir + 'fig6/polyR/forward-periodic/b500/contact_map_distances.npy'\n",
-    "fig6_loop_fus =np.load(fus_binder_contact_frequency_file)\n",
+    "fus_binder_contact_frequency_file = figures_data_dir + 'fig6/polyR/forward-periodic/b500/contact_map_distances.txt'\n",
+    "fig6_loop_fus = np.loadtxt(fus_binder_contact_frequency_file)\n",
     "fig6_ideal_normalization = np.zeros_like(fig6_loop_fus)\n",
     "for i in range(fig6_loop_fus.shape[0]):\n",
     "    for j in range(fig6_loop_fus.shape[1]):\n",
